--- a/style.css
+++ b/style.css
@@ -156,6 +156,40 @@ a:hover {
 
 
 /* ========== SECTIONS =========== */
+section {
+    padding-top: 4vh;
+    height: 96vh;
+    margin: 0 10rem;
+    box-sizing: border-box;
+    min-height: fit-content;
+}
+
+.section-container {
+    display: flex;
+}
+
+/* ========== PROFILE SECTION =========== */
+#profile {
+    display: flex;
+    justify-content: center;
+    gap: 5rem;
+    height: 80vh;
+}
+
+.section__pic_container {
+    display: flex;
+    height: 400px;
+    width: 400px;
+    margin: auto 0;
+}
+
+.section__text {
+    
+}
+
+
+
+
 
 
 /* ========== MEDIA QURIES =========== */
@@ -168,4 +202,3 @@ a:hover {
         display: flex;
     }
 }
-
